--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,5 @@
     <dimen name="dialog_text_size">16sp</dimen>
     <dimen name="dialog_button_margin_vertical">20dp</dimen>
     <dimen name="dialog_button_margin_horizontal">40dp</dimen>
-    <dimen name="dialog_annotation_size">12dp</dimen>
+    <dimen name="dialog_annotation_size">12sp</dimen>
 </resources>
