--- a/app/src/main/res/layout/layout_dialog_purchaselife.xml
+++ b/app/src/main/res/layout/layout_dialog_purchaselife.xml
@@ -66,46 +66,48 @@
             app:layout_constraintStart_toStartOf="@id/textView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+
+        <Button
+            android:id="@+id/button_yes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="@dimen/dialog_button_margin_vertical"
+            android:layout_marginEnd="@dimen/dialog_button_margin_horizontal"
+            android:layout_marginBottom="@dimen/dialog_button_margin_vertical"
+            android:background="@color/black"
+            android:backgroundTint="@color/black"
+            android:backgroundTintMode="src_over"
+            android:fontFamily="monospace"
+            android:text="@string/yes"
+            android:textAllCaps="true"
+            app:backgroundTint="@null"
+            android:textColor="@color/text_lightblue"
+            android:textSize="@dimen/dialog_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/textView"
+            app:layout_constraintTop_toBottomOf="@id/textViewAnnotation" />
+
+        <Button
+            android:id="@+id/button_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dialog_button_margin_horizontal"
+            android:layout_marginTop="@dimen/dialog_button_margin_vertical"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="@dimen/dialog_button_margin_vertical"
+            android:background="@color/black"
+            android:fontFamily="monospace"
+            android:text="@string/no"
+            android:textAllCaps="true"
+            android:textColor="@color/text_red"
+            android:textSize="@dimen/dialog_text_size"
+            app:backgroundTint="@null"
+            app:layout_constraintBottom_toBottomOf="@+id/button_yes"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/button_yes" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/button_yes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dialog_button_margin_horizontal"
-        android:layout_marginTop="@dimen/dialog_button_margin_vertical"
-        android:layout_marginEnd="@dimen/dialog_button_margin_horizontal"
-        android:layout_marginBottom="@dimen/dialog_button_margin_vertical"
-        android:background="@color/black"
-        android:backgroundTint="@color/black"
-        android:backgroundTintMode="src_over"
-        android:fontFamily="monospace"
-        android:text="@string/yes"
-        android:textAllCaps="true"
-        app:backgroundTint="@null"
-        android:textColor="@color/text_lightblue"
-        android:textSize="@dimen/dialog_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/inner_layout" />
-
-    <Button
-        android:id="@+id/button_no"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dialog_button_margin_horizontal"
-        android:layout_marginTop="@dimen/dialog_button_margin_vertical"
-        android:layout_marginEnd="@dimen/dialog_button_margin_horizontal"
-        android:layout_marginBottom="@dimen/dialog_button_margin_vertical"
-        android:background="@color/black"
-        android:fontFamily="monospace"
-        android:text="@string/no"
-        android:textAllCaps="true"
-        android:textColor="@color/text_red"
-        android:textSize="@dimen/dialog_text_size"
-        app:backgroundTint="@null"
-        app:layout_constraintBottom_toBottomOf="@+id/button_yes"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button_yes" />
     
 </androidx.constraintlayout.widget.ConstraintLayout>
