--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -47,7 +47,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
-                android:text="Version"
+                android:text="@string/version"
                 android:textColor="@color/circuit"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
