--- a/app/src/main/res/layout/layout_dialog_message_of_the_day.xml
+++ b/app/src/main/res/layout/layout_dialog_message_of_the_day.xml
@@ -2,12 +2,10 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/shape_border_yellow"
-    android:scaleType="centerCrop"
-    >
+    android:scaleType="centerCrop">
 
     <ImageView
         android:id="@+id/deko"
