--- a/app/src/main/res/layout/layout_dialog_new_game.xml
+++ b/app/src/main/res/layout/layout_dialog_new_game.xml
@@ -6,8 +6,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/shape_border_yellow"
-    android:scaleType="centerCrop"
-    >
+    android:scaleType="centerCrop">
 
     <ImageView
         android:id="@+id/deko"
@@ -43,7 +42,8 @@
             android:textSize="@dimen/dialog_text_size"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/button1"
@@ -61,7 +61,8 @@
             app:backgroundTint="@null"
             app:layout_constraintTop_toBottomOf="@id/question"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/button2"
@@ -78,7 +79,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/button1"
             app:layout_constraintBottom_toBottomOf="@id/button1"
-            />
+            tools:ignore="HardcodedText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
