--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,6 +52,7 @@
     <color name="chips_soldstate_foreground">#707070</color>
     <color name="chips_soldstate_glow">#CFCFCF</color>
     <color name="chips_background">#FF303030</color>
+    <color name="chips_background_alternate">#545454</color>
     <color name="resistor_background">#303030</color>
     <color name="scoreboard_text">#FFFFFF</color>
     <color name="led_red">#FF5640</color>
