--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -124,6 +124,14 @@
             android:text="@string/settings_keep_levels"
             android:textColor="#FFFFFF" />
 
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switch_use_hex"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="36dp"
+            android:onClick="savePrefs"
+            android:text="@string/settings_use_hex"
+            android:textColor="#FFFFFF" />
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/switch_activate_log"
